//
//  LoginView.swift
//  viz-wallet
//
//  Created by Vladimir Babin on 22.02.2021.
//

import SwiftUI

struct LoginView: View {
    @Environment(UserAuthStore.self) private var userAuth
    @State private var login = ""
    @State private var regularKey = ""
    @State private var showErrorMessage: Bool = false
    @State private var errorMessageText: String = ""
    
    // MARK: - View
    var body: some View {
        VStack() {
            LottieView(name: "39387-business-team")
            VStack() {
                
                VStack(spacing: 15) {
                    TextField("Login", text: $login)
                        .accessibility(identifier: "login")
                        .padding()
                        .background(Color.themeTextField)
                        .cornerRadius(20.0)
                        .disableAutocorrection(true)
                        .textInputAutocapitalization(.never)
                    
                    TextField("Private regular key", text: $regularKey)
                        .accessibility(identifier: "regular")
                        .padding()
                        .background(Color.themeTextField)
                        .cornerRadius(20.0)
                        .disableAutocorrection(true)
                        .textInputAutocapitalization(.never)
                    
                    if userAuth.isLoading {
                        ActivityIndicator(isAnimating: .constant(true))
                    } else {
                        Button(action: {
                            Task {
                                await signIn()
                            }
                        }) {
                            Text("Sign In")
                                .accessibility(identifier: "signin")
                                .font(.headline)
                                .foregroundColor(.white)
                                .padding()
                                .frame(
                                    maxWidth: .infinity,
                                    minHeight: 50,
                                    maxHeight: 50,
                                    alignment: .center
                                )
                                .background(Color.green)
                                .cornerRadius(15.0)
                        }
                    }
                }
                .padding(.bottom, 25)

                Spacer()
            }
            .padding([.leading, .trailing], 16.0)
        }
        .background(
            LinearGradient(gradient: Gradient(colors: [.purple, .blue]), startPoint: .top, endPoint: .bottom)
                .ignoresSafeArea())
        .onTapGesture {
            hideKeyboard()
        }
        .alert(isPresented: $showErrorMessage) { () -> Alert in
            Alert(title: Text("Error"),
                  message: Text(errorMessageText),
                  dismissButton: .default(Text("Ok"))
            )
        }
    }
    
    func signIn() async {
        do {
            try await userAuth.auth(login: login, key: regularKey)
        } catch {
            errorMessageText = error.localizedDescription
            showErrorMessage = true
        }
    }
}

#Preview {
    Group {
        LoginView().environment(UserAuthStore())
    }
}
