...
            "state" : "translated",
            "value" : "Логин слишком маленький"
          }
        }
      }
    },
    "Logout" : {
      "extractionState" : "migrated",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Выйти"
          }
        }
      }
    },
    "Memo" : {
      "extractionState" : "migrated",
...
